<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.ShoeDetailFragment">

    <data>

        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />

        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <TextView
            android:id="@+id/textViewShoeName"
            style="@style/textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"

            app:layout_constraintBottom_toTopOf="@+id/textViewCompanyName"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextShoeName"
            style="@style/editText_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_shoe_name_here"
            android:inputType="textPersonName"
            android:text="@={shoeData.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewShoeName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textViewCompanyName"
            style="@style/textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/company_name"
            app:layout_constraintBottom_toTopOf="@+id/textViewSize"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextCompanyName"
            style="@style/editText_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/enter_company_name"
            android:inputType="textPersonName"
            android:text="@={shoeData.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textViewCompanyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textViewSize"
            style="@style/textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextSize"
            style="@style/editText_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:hint="@string/enter_shoe_size"
            android:inputType="number"
            android:text="@={shoeData.size}"

            app:layout_constraintBaseline_toBaselineOf="@+id/textViewSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textView2"
            style="@style/textView_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"

            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:ems="10"
            android:hint="@string/enter_shoe_description_here"
            android:inputType="textPersonName"
            android:text="@={shoeData.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/buttonCancel"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <Button
            android:id="@+id/buttonSave"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="@{()-> shoeViewModel.addShoe(shoeData)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline8"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>