<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.ShoeDetailFragment">

    <data>

        <variable
            name="shoeData"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_style"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/textView3"
                style="@style/textView_style"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/company_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textViewShoeName"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeData.name}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                tools:text="Running Shoe" />

            <TextView
                android:id="@+id/textView"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/size"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textViewSize"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeData.size}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                tools:text="7" />

            <TextView
                android:id="@+id/textView2"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"

                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textViewDescription"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeData.description}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                tools:text="This is running shoe" />

            <TextView
                android:id="@+id/textViewCompanyName"
                style="@style/textView_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{shoeData.company}"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline6"
                tools:text="Nike" />


            <!--        <View-->
            <!--            android:id="@+id/divider"-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="5dp"-->
            <!--            android:layout_marginBottom="16dp"-->
            <!--            android:background="?android:attr/listDivider"-->
            <!--            app:layout_constraintBottom_toBottomOf="parent"-->
            <!--            app:layout_constraintEnd_toEndOf="parent"-->
            <!--            app:layout_constraintStart_toStartOf="parent"-->
            <!--            app:layout_constraintTop_toBottomOf="@+id/textViewDescription" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>